@@ -1,0 +1,76 @@
+<?php
+namespace SJBR\SrFeuserRegister\Captcha;
+
+/*
+ *  Copyright notice
+ *
+ *  (c) 2009 Sonja Scholz <ss@cabag.ch>
+ *  (c) 2015 Stanislas Rolland <typo3(arobas)sjbr.ca>
+ *  All rights reserved
+ *
+ *  This script is part of the TYPO3 project. The TYPO3 project is
+ *  free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  The GNU General Public License can be found at
+ *  http://www.gnu.org/copyleft/gpl.html.
+ *  This script is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  GNU General Public License for more details.
+ *
+ *  This copyright notice MUST APPEAR in all copies of the script!
+ */
+
+use SJBR\SrFeuserRegister\Captcha\CaptchaInterface;
+use TYPO3\CMS\Core\Utility\ExtensionManagementUtility;
+
+/**
+ * Hook for captcha image marker when extension 'captcha' is used
+ */
+class Captcha implements CaptchaInterface
+{
+	/**
+	 * Sets the value of captcha markers
+	 */
+	public function addGlobalMarkers(&$markerArray, $markerObject)
+	{
+		$cmdKey = $markerObject->controlData->getCmdKey();
+		if (ExtensionManagementUtility::isLoaded('captcha') && $markerObject->conf[$cmdKey . '.']['evalValues.']['captcha_response'] === 'captcha') {
+			$markerArray['###CAPTCHA_IMAGE###'] = '<img src="' . ExtensionManagementUtility::siteRelPath('captcha') . 'captcha/captcha.php" alt="" />';
+		} else {
+			$markerArray['###CAPTCHA_IMAGE###'] = '';
+		}
+	}
+
+	/**
+	 * Evaluates the captcha word
+	 *
+	 * @param string $theTable: the name of the table in use
+	 * @param array $dataArray: current input array
+	 * @param string $theField: the name of the captcha field
+	 * @param string $cmdKey: the current command key
+	 * @param array $cmdParts: parts of the 'eval' command
+	 * @return string The name of the field in error or empty string
+	 */
+	public function evalValues($theTable, $dataArray, $theField, $cmdKey, $cmdParts)
+	{
+		$errorField = '';
+		if (trim($cmdParts[0]) === 'captcha' && ExtensionManagementUtility::isLoaded('captcha') && isset($dataArray[$theField])) {
+			$captchaString = '';
+			$started = session_start();
+			if (isset($_SESSION['tx_captcha_string'])) {
+				$captchaString = $_SESSION['tx_captcha_string'];
+				if (empty($captchaString) || $dataArray['captcha_response'] !== $captchaString) {
+					$errorField = $theField;
+				} else {
+					$_SESSION['tx_captcha_string'] = '';
+				}
+			} else {
+				$errorField = $theField;
+			}
+		}
+		return $errorField;
+	}
+}
