@@ -1,0 +1,47 @@
+<?php
+namespace SJBR\SrFeuserRegister\Captcha;
+/*
+ *  Copyright notice
+ *
+ *  (c) 2015 Stanislas Rolland <typo3(arobas)sjbr.ca>
+ *  All rights reserved
+ *
+ *  This script is part of the TYPO3 project. The TYPO3 project is
+ *  free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  The GNU General Public License can be found at
+ *  http://www.gnu.org/copyleft/gpl.html.
+ *  This script is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  GNU General Public License for more details.
+ *
+ *  This copyright notice MUST APPEAR in all copies of the script!
+ */
+
+use TYPO3\CMS\Core\SingletonInterface;
+
+/**
+ * Inferface for captcha hooks
+ */
+interface CaptchaInterface extends SingletonInterface
+{
+	/**
+	 * Sets the value of captcha markers
+	 */
+	public function addGlobalMarkers(&$markerArray, $markerObject);
+
+	/**
+	 * Evaluates the captcha word
+	 *
+	 * @param string $theTable: the name of the table in use
+	 * @param array $dataArray: current input array
+	 * @param string $theField: the name of the captcha field
+	 * @param string $cmdKey: the current command key
+	 * @param array $cmdParts: parts of the 'eval' command
+	 * @return string The name of the field in error or empty string
+	 */
+	public function evalValues($theTable, $dataArray, $theField, $cmdKey, $cmdParts);
+}
